# BookStore

./: .gitignore  Porcfile  README.md  pyproject.toml
bookstore/: admin.py  views.py
bookstore/migrations/: 0001_initial.py  0002_category_publisher.py  0003_alter_category_options.py  0004_book.py  0005_remove_book_category_remove_book_author_and_more.py  0006_book_price_book_quantity.py  0007_purchase.py  0008_purchasebooks.py  0009_alter_purchasebooks_options.py
bookstore/models/: author.py  book.py  category.py  publisher.py  purchase.py  purchaseBooks.py
setup/: settings.py  urls.py
